added stats and utm
